# concordal

./: .dockerignore  .env.example  Dockerfile  README.md  concordal_report_upgrade_v90_research_design.md  concordal_vs_ima_study.md  fly.toml  push_v79_rebrand_concordal.command  push_v80_url_cleanup.command  push_v81_psycopg.command  push_v82_perplexity_sonar.command  push_v83_v4_pro_perplexity.command  push_v84_fix_published_at.command  push_v85_pre_ipo_and_honesty.command  push_v85_pre_ipo_page.command  pyproject.toml  railway.toml
.github/workflows/: ci.yml  keepalive.yml
.tradingagents/: AAPL.jsonl  waitlist.jsonl
.tradingagents/cache/: 3114ea741d081fa8.pkl
api/: auth.py  config.py  data_fetcher.py  db.py  email_send.py  main.py  openbb_widget.py  persistence.py  queue.py  report_builder.py  waitlist.py
docs/: ARCHITECTURE.md  COMPLIANCE.md  COST_MODEL.md  DEPLOY.md  ROADMAP_OPEN.md
examples/: run_backtest.py  run_decision.py
reports/: README.md  latest.json
src/trading_agents/: __init__.py  cli.py
src/trading_agents/adapters/: __init__.py  base.py  cn_equity.py  cn_stock_multi_source.py  crypto_ccxt.py  macro_openbb.py  mock.py  perplexity_sonar.py  registry.py  sec_edgar.py  social_guba.py  social_reddit.py  yahoo_us_equity.py
src/trading_agents/agents/: _quote_block.py  analysts.py  manager.py  researchers.py  risk.py  (+1 more)
tests/: test_pipeline.py
web/: next.config.mjs  package.json  tailwind.config.ts  vercel.json
web/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
(+123 files in other folders)
