[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agents-platform"
version = "0.1.0"
description = "Multi-agent LLM trading decision-support platform, inspired by TradingAgents (arXiv:2412.20138)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "pandas>=2.2",
    "numpy>=1.26",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "tenacity>=8.2",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
anthropic = ["anthropic>=0.30"]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "redis>=5.0",
    "PyJWT>=2.8",
    "pydantic[email]>=2.6",
    "sentry-sdk>=2.0",
]
# Optional observability / queue / RL — env-gated, no import unless enabled.
observability = ["langfuse>=2.0"]
queue = ["arq>=0.26", "redis>=5.0"]
rl = ["stable-baselines3>=2.3", "gymnasium>=0.29"]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
ta = "trading_agents.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
